--- a/www/main.css
+++ b/www/main.css
@@ -430,7 +430,7 @@ html body .ui-footer div.ui-slider-track.ui-body-a .ui-btn-active{
 
 
 span.CharOverride-2 {
-    font-size: 24px;
+    font-size: 26px;
     font-style: normal;
     font-weight: bold;
 }
@@ -495,6 +495,8 @@ html body .ui-header .ui-group-theme-a .ui-bar-inherit {
 .authors {
     vertical-align: top;
     padding: 15px 0 0 15px;
+    height: 100%;
+    bottom-border: 4px solid #FAD232;
 }
 .middle img, .authors {
     display: inline-block;
